<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:gravity="center_vertical|center_horizontal">
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/server_is"
            android:id="@+id/lblStatus"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="24sp"
            android:layout_marginBottom="8dp"/>
    <Button
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/stop"
            android:id="@+id/btnStop"
            android:layout_margin="4dp"
            android:onClick="btnStopClick"/>
    <Button
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/kill"
            android:id="@+id/btnKill"
            android:layout_margin="4dp"
            android:onClick="btnKillClick"/>
    <Button
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/wipe_out"
            android:id="@+id/btnWipeout"
            android:layout_margin="4dp"
            android:onClick="btnWipeoutClick"/>
    <Button
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:id="@+id/btnStart"
            android:layout_margin="4dp"
            android:onClick="btnStartClick"
            android:enabled="false"/>
</LinearLayout>

